[gd_scene load_steps=6 format=3 uid="uid://cjurels8w00yt"]

[ext_resource type="PackedScene" uid="uid://djyf7ncsicyvb" path="res://nodes/enviroment/main_scene.tscn" id="1_6hh60"]
[ext_resource type="PackedScene" uid="uid://dqh6mdqa30heo" path="res://scenes/player/player.tscn" id="2_7ywto"]
[ext_resource type="Script" uid="uid://dmnh1doxb08gd" path="res://scenes/main_game_scene/rythm_manager_json.gd" id="3_85u8w"]
[ext_resource type="AudioStream" uid="uid://buho23fewdeqf" path="res://assets/music/song1.wav" id="4_85u8w"]
[ext_resource type="Script" uid="uid://buofg1t55lvc2" path="res://scenes/main_game_scene/enemy_spawner.gd" id="5_85u8w"]

[node name="Game" type="Node3D"]

[node name="MainScene" parent="." instance=ExtResource("1_6hh60")]

[node name="Player" parent="." instance=ExtResource("2_7ywto")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.2121725, -0.027)

[node name="RythmManager" type="Node" parent="."]
script = ExtResource("3_85u8w")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RythmManager"]
stream = ExtResource("4_85u8w")

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("5_85u8w")

[node name="Markers" type="Node3D" parent="."]

[node name="Spawn1" type="Marker3D" parent="Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.221243, 8, -21.450056)

[node name="Spawn2" type="Marker3D" parent="Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.61159706, 8, -30.492064)

[node name="Spawn3" type="Marker3D" parent="Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.370123, 8, -23.455584)
